--- a/index.html
+++ b/index.html
@@ -1,1 +1,264 @@
-<html></html>
+<!DOCTYPE html>
+<html lang="en" class="no-js">
+
+<head>
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <title>Birikim.app</title>
+    <link href="https://fonts.googleapis.com/css?family=IBM+Plex+Sans:400,600" rel="stylesheet">
+    <link rel="stylesheet" href="dist/css/style.css">
+    <script src="https://unpkg.com/animejs@3.0.1/lib/anime.min.js"></script>
+    <script src="https://unpkg.com/scrollreveal@4.0.0/dist/scrollreveal.min.js"></script>
+</head>
+
+<body class="is-boxed has-animations">
+    <div class="body-wrap">
+        <header class="site-header">
+            <div class="container">
+                <div class="site-header-inner">
+                    <div class="brand header-brand">
+                        <h1 class="m-0">
+                            <a href="#">
+                                <img class="header-logo-image" src="dist/images/logo.svg" alt="Logo">
+                            </a>
+                        </h1>
+                    </div>
+                </div>
+            </div>
+        </header>
+
+        <main>
+            <section class="hero">
+                <div class="container">
+                    <div class="hero-inner">
+                        <div class="hero-copy">
+                            <h1 class="hero-title mt-0">Birikim Artık Sizlerle 🥳</h1>
+                            <p class="hero-paragraph">O para nereye gitti artık bileceksiniz. En uygun fiyatlı ürünler
+                                nerede hemen bulabileceksiniz. Birikimleriniz ne kadar değerlenmiş anında
+                                görebileceksiniz.</p>
+                            <!-- <div class="hero-cta"><a class="button button-primary" href="#">Pre order now</a><a
+                                    class="button" href="#">Get in touch</a></div> -->
+                        </div>
+                        <div class="feature-icon">
+                            <img src="dist/svg/1.svg" alt="Logo" height="200">
+                        </div>
+
+                    </div>
+                </div>
+            </section>
+
+            <section class="features section">
+                <div class="container">
+                    <div class="features-inner section-inner has-bottom-divider">
+                        <div class="features-wrap">
+                            <div class="feature text-center is-revealing">
+                                <div class="feature-inner">
+                                    <div class="feature-icon">
+                                        <img src="dist/svg/2.svg" alt="Feature 01">
+                                    </div>
+                                    <h4 class="feature-title mt-24">Cüzdan</h4>
+                                    <!-- <p class="text-sm mb-0">Fermentum posuere urna nec tincidunt praesent semper feugiat
+                                        nibh. A arcu cursus vitae congue mauris. Nam at lectus urna duis convallis.
+                                        Mauris rhoncus aenean vel elit scelerisque mauris.</p> -->
+                                </div>
+                            </div>
+                            <div class="feature text-center is-revealing">
+                                <div class="feature-inner">
+                                    <div class="feature-icon">
+                                        <img src="dist/svg/3.svg" alt="Feature 02">
+                                    </div>
+                                    <h4 class="feature-title mt-24">Güvenlik</h4>
+                                    <!-- <p class="text-sm mb-0">Fermentum posuere urna nec tincidunt praesent semper feugiat
+                                        nibh. A arcu cursus vitae congue mauris. Nam at lectus urna duis convallis.
+                                        Mauris rhoncus aenean vel elit scelerisque mauris.</p> -->
+                                </div>
+                            </div>
+                            <div class="feature text-center is-revealing">
+                                <div class="feature-inner">
+                                    <div class="feature-icon">
+                                        <img src="dist/svg/4.svg" alt="Feature 03">
+                                    </div>
+                                    <h4 class="feature-title mt-24">Analiz</h4>
+                                    <!-- <p class="text-sm mb-0">Fermentum posuere urna nec tincidunt praesent semper feugiat
+                                        nibh. A arcu cursus vitae congue mauris. Nam at lectus urna duis convallis.
+                                        Mauris rhoncus aenean vel elit scelerisque mauris.</p> -->
+                                </div>
+                            </div>
+                            <div class="feature text-center is-revealing">
+                                <div class="feature-inner">
+                                    <div class="feature-icon">
+                                        <img src="dist/svg/5.svg" alt="Feature 04">
+                                    </div>
+                                    <h4 class="feature-title mt-24">Kasa</h4>
+                                    <!-- <p class="text-sm mb-0">Fermentum posuere urna nec tincidunt praesent semper feugiat
+                                        nibh. A arcu cursus vitae congue mauris. Nam at lectus urna duis convallis.
+                                        Mauris rhoncus aenean vel elit scelerisque mauris.</p> -->
+                                </div>
+                            </div>
+                            <div class="feature text-center is-revealing">
+                                <div class="feature-inner">
+                                    <div class="feature-icon">
+                                        <img src="dist/svg/6.svg" alt="Feature 05">
+                                    </div>
+                                    <h4 class="feature-title mt-24">Kıymetli Maden</h4>
+                                    <!-- <p class="text-sm mb-0">Fermentum posuere urna nec tincidunt praesent semper feugiat
+                                        nibh. A arcu cursus vitae congue mauris. Nam at lectus urna duis convallis.
+                                        Mauris rhoncus aenean vel elit scelerisque mauris.</p> -->
+                                </div>
+                            </div>
+                            <div class="feature text-center is-revealing">
+                                <div class="feature-inner">
+                                    <div class="feature-icon">
+                                        <img src="dist/svg/7.svg" alt="Feature 06">
+                                    </div>
+                                    <h4 class="feature-title mt-24">Döviz</h4>
+                                    <!-- <p class="text-sm mb-0">Fermentum posuere urna nec tincidunt praesent semper feugiat
+                                        nibh. A arcu cursus vitae congue mauris. Nam at lectus urna duis convallis.
+                                        Mauris rhoncus aenean vel elit scelerisque mauris.</p> -->
+                                </div>
+                            </div>
+                            <div class="feature text-center is-revealing">
+                                <div class="feature-inner">
+                                    <div class="feature-icon">
+                                        <img src="dist/svg/8.svg" alt="Feature 06">
+                                    </div>
+                                    <h4 class="feature-title mt-24">Gelir Yönetimi</h4>
+                                    <!-- <p class="text-sm mb-0">Fermentum posuere urna nec tincidunt praesent semper feugiat
+                                                                        nibh. A arcu cursus vitae congue mauris. Nam at lectus urna duis convallis.
+                                                                        Mauris rhoncus aenean vel elit scelerisque mauris.</p> -->
+                                </div>
+                            </div>
+                            <div class="feature text-center is-revealing">
+                                <div class="feature-inner">
+                                    <div class="feature-icon">
+                                        <img src="dist/svg/9.svg" alt="Feature 06">
+                                    </div>
+                                    <h4 class="feature-title mt-24">Gider Yönetimi</h4>
+                                    <!-- <p class="text-sm mb-0">Fermentum posuere urna nec tincidunt praesent semper feugiat
+                                                                        nibh. A arcu cursus vitae congue mauris. Nam at lectus urna duis convallis.
+                                                                        Mauris rhoncus aenean vel elit scelerisque mauris.</p> -->
+                                </div>
+                            </div>
+                            <div class="feature text-center is-revealing">
+                                <div class="feature-inner">
+                                    <div class="feature-icon">
+                                        <img src="dist/svg/10.svg" alt="Feature 06">
+                                    </div>
+                                    <h4 class="feature-title mt-24">Alışveriş</h4>
+                                    <!-- <p class="text-sm mb-0">Fermentum posuere urna nec tincidunt praesent semper feugiat
+                                                                        nibh. A arcu cursus vitae congue mauris. Nam at lectus urna duis convallis.
+                                                                        Mauris rhoncus aenean vel elit scelerisque mauris.</p> -->
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </section>
+
+            <section class="pricing section">
+                <div class="container-sm">
+                    <div class="pricing-inner section-inner">
+                        <div class="pricing-header text-center">
+                            <h2 class="section-title mt-0">Adresimiz</h2>
+                            <p class="section-paragraph mb-0">EFA Haşim Yerlikaya<br>
+                                Balat Mahallesi Hızır Çavuş Mescidi Sokak No:40/A Fatih / İstanbul
+                            </p>
+                        </div>
+                        <!-- <div class="pricing-tables-wrap">
+                            <div class="pricing-table">
+                                <div class="pricing-table-inner is-revealing">
+                                    <div class="pricing-table-main">
+                                        <div class="pricing-table-header pb-24">
+                                            <div class="pricing-table-price"><span
+                                                    class="pricing-table-price-currency h2">$</span><span
+                                                    class="pricing-table-price-amount h1">49</span><span
+                                                    class="text-xs">/month</span></div>
+                                        </div>
+                                        <div class="pricing-table-features-title text-xs pt-24 pb-24">What you will get
+                                        </div>
+                                        <ul class="pricing-table-features list-reset text-xs">
+                                            <li>
+                                                <span>Lorem ipsum dolor sit nisi</span>
+                                            </li>
+                                            <li>
+                                                <span>Lorem ipsum dolor sit nisi</span>
+                                            </li>
+                                            <li>
+                                                <span>Lorem ipsum dolor sit nisi</span>
+                                            </li>
+                                            <li>
+                                                <span>Lorem ipsum dolor sit nisi</span>
+                                            </li>
+                                        </ul>
+                                    </div>
+                                    <div class="pricing-table-cta mb-8">
+                                        <a class="button button-primary button-shadow button-block" href="#">Pre order
+                                            now</a>
+                                    </div>
+                                </div>
+                            </div>
+                        </div> -->
+                    </div>
+                </div>
+            </section>
+
+            <section class="cta section">
+                <div class="container">
+                    <div class="cta-inner section-inner">
+                        <h3 class="section-title mt-0">Bize ulaşmak ister misiniz?</h3>
+                        <div class="cta-cta">
+                            <a class="button button-primary button-wide-mobile"
+                                href="mailto: info@birikim.app">info@birikim.app</a>
+                        </div>
+                    </div>
+                </div>
+            </section>
+        </main>
+
+        <footer class="site-footer">
+            <div class="container">
+                <div class="site-footer-inner">
+                    <div class="brand footer-brand">
+                        <a href="#">
+                            <img class="header-logo-image" src="dist/images/logo.svg" alt="Logo">
+                        </a>
+                    </div>
+                    <ul class="footer-links list-reset">
+                        <li>
+                            <a href="/kvkk.html">KVKK</a>
+                        </li>
+                        <!-- <li>
+                            <a href="#">About us</a>
+                        </li>
+                        <li>
+                            <a href="#">FAQ's</a>
+                        </li>
+                        <li>
+                            <a href="#">Support</a>
+                        </li> -->
+                    </ul>
+                    <ul class="footer-social-links list-reset">
+
+                        <li>
+                            <a href="https://www.twitter.com/birikimapp">
+                                <span class="screen-reader-text">Twitter</span>
+                                <svg width="16" height="16" xmlns="http://www.w3.org/2000/svg">
+                                    <path
+                                        d="M16 3c-.6.3-1.2.4-1.9.5.7-.4 1.2-1 1.4-1.8-.6.4-1.3.6-2.1.8-.6-.6-1.5-1-2.4-1-1.7 0-3.2 1.5-3.2 3.3 0 .3 0 .5.1.7-2.7-.1-5.2-1.4-6.8-3.4-.3.5-.4 1-.4 1.7 0 1.1.6 2.1 1.5 2.7-.5 0-1-.2-1.5-.4C.7 7.7 1.8 9 3.3 9.3c-.3.1-.6.1-.9.1-.2 0-.4 0-.6-.1.4 1.3 1.6 2.3 3.1 2.3-1.1.9-2.5 1.4-4.1 1.4H0c1.5.9 3.2 1.5 5 1.5 6 0 9.3-5 9.3-9.3v-.4C15 4.3 15.6 3.7 16 3z"
+                                        fill="#0270D7" />
+                                </svg>
+                            </a>
+                        </li>
+
+                    </ul>
+                    <div class="footer-copyright">&copy; 2022 EFA, all rights reserved</div>
+                </div>
+            </div>
+        </footer>
+    </div>
+
+    <script src="dist/js/main.min.js"></script>
+</body>
+
+</html>
