--- a/index.html
+++ b/index.html
@@ -10,6 +10,8 @@
     <link rel="stylesheet" href="dist/css/style.css">
     <script src="https://unpkg.com/animejs@3.0.1/lib/anime.min.js"></script>
     <script src="https://unpkg.com/scrollreveal@4.0.0/dist/scrollreveal.min.js"></script>
+    <link rel="icon" type="image/x-icon" href="dist/images/logo.svg">
+
 </head>
 
 <body class="is-boxed has-animations">
@@ -40,7 +42,7 @@
                             <!-- <div class="hero-cta"><a class="button button-primary" href="#">Pre order now</a><a
                                     class="button" href="#">Get in touch</a></div> -->
                         </div>
-                        <div class="feature-icon">
+                        <div>
                             <img src="dist/svg/1.svg" alt="Logo" height="200">
                         </div>
 
