Market butonları eklendi

--- a/index.html
+++ b/index.html
@@ -39,8 +39,25 @@
                             <p class="hero-paragraph">O para nereye gitti artık bileceksiniz. En uygun fiyatlı ürünler
                                 nerede hemen bulabileceksiniz. Birikimleriniz ne kadar değerlenmiş anında
                                 görebileceksiniz.</p>
-                            <!-- <div class="hero-cta"><a class="button button-primary" href="#">Pre order now</a><a
-                                    class="button" href="#">Get in touch</a></div> -->
+
+                            <table>
+                                <td>
+                                    <div style="height: 50;">
+                                        <a
+                                            href='https://play.google.com/store/apps/details?id=app.birikim.mobile&pcampaignid=pcampaignidMKT-Other-global-all-co-prtnr-py-PartBadge-Mar2515-1'><img
+                                                alt="Google Play'den alın"
+                                                src='https://play.google.com/intl/en_us/badges/static/images/badges/tr_badge_web_generic.png'
+                                                height="50" width="200" /></a>
+                                    </div>
+                                </td>
+                                <td>
+                                    <div style="height: 500;">
+                                        <a href='https://apps.apple.com/us/app/birikim/id1600832868'><img
+                                                alt="AppStore'dan indirin" src='assets/svg/appstore.svg'
+                                                width="200" /></a>
+                                    </div>
+                                </td>
+                            </table>
                         </div>
                         <div>
                             <img src="dist/svg/1.svg" alt="Logo" height="200">
@@ -255,8 +272,17 @@
 
                     </ul>
                     <div class="footer-copyright">&copy; 2022 EFA, all rights reserved</div>
+
                 </div>
+                <br>
+                <div class="footer-copyright">&copy;Google Play ve Google Play logosu Google LLC kuruluşunun ticari
+                    markalarıdır.</div>
+                <br>
+
+                <br>
+
             </div>
+
         </footer>
     </div>
 
