Twitter ayarları yapıldı

--- a/index.html
+++ b/index.html
@@ -12,6 +12,14 @@
     <script src="https://unpkg.com/scrollreveal@4.0.0/dist/scrollreveal.min.js"></script>
     <link rel="icon" type="image/x-icon" href="dist/images/logo.svg">
 
+    <meta name="twitter:card" content="summary_large_image">
+    <meta name="twitter:site" content="@BirikimApp">
+    <meta name="twitter:creator" content="@YerlikayaHasim">
+    <meta name="twitter:title" content="Birikim Artık Sizlerle 🥳">
+    <meta name="twitter:description"
+        content="O para nereye gitti artık bileceksiniz. En uygun fiyatlı ürünler nerede hemen bulabileceksiniz. Birikimleriniz ne kadar değerlenmiş anında görebileceksiniz."
+        content="https://birikim.app/dist/svg/1.svg">
+
 </head>
 
 <body class="is-boxed has-animations">
