--- a/index.html
+++ b/index.html
@@ -17,8 +17,8 @@
     <meta name="twitter:creator" content="@YerlikayaHasim">
     <meta name="twitter:title" content="Birikim Artık Sizlerle 🥳">
     <meta name="twitter:description"
-        content="O para nereye gitti artık bileceksiniz. En uygun fiyatlı ürünler nerede hemen bulabileceksiniz. Birikimleriniz ne kadar değerlenmiş anında görebileceksiniz."
-        content="https://birikim.app/dist/svg/1.svg">
+        content="O para nereye gitti artık bileceksiniz. En uygun fiyatlı ürünler nerede hemen bulabileceksiniz. Birikimleriniz ne kadar değerlenmiş anında görebileceksiniz.">
+    <meta name="twitter:image" content="http:/birikim.app/dist/pay_store.png">
 
 </head>
 
