Twitter görsel url düzenlendi

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <meta name="twitter:title" content="Birikim Artık Sizlerle 🥳">
     <meta name="twitter:description"
         content="O para nereye gitti artık bileceksiniz. En uygun fiyatlı ürünler nerede hemen bulabileceksiniz. Birikimleriniz ne kadar değerlenmiş anında görebileceksiniz.">
-    <meta name="twitter:image" content="http:/birikim.app/dist/pay_store.png">
+    <meta name="twitter:image" content="https://birikim.app/dist/pay_store.png">
 
 </head>
 
