--- a/index.html
+++ b/index.html
@@ -12,15 +12,31 @@
     <script src="https://unpkg.com/scrollreveal@4.0.0/dist/scrollreveal.min.js"></script>
     <link rel="icon" type="image/x-icon" href="dist/images/logo.svg">
 
-    <meta name="twitter:card" content="summary_large_image">
+    <!-- <meta name="twitter:card" content="summary_large_image">
     <meta name="twitter:site" content="@BirikimApp">
     <meta name="twitter:creator" content="@YerlikayaHasim">
     <meta name="twitter:title" content="Birikim Artık Sizlerle 🥳">
     <meta name="twitter:description"
-        content="O para nereye gitti artık bileceksiniz. En uygun fiyatlı ürünler nerede hemen bulabileceksiniz. Birikimleriniz ne kadar değerlenmiş anında görebileceksiniz.">
+        content="">
 
     <meta name="twitter:image"
-        content="https://raw.githubusercontent.com/EFA-dev/birikim.app/main/dist/images/play_store.png">
+        content="https://raw.githubusercontent.com/EFA-dev/birikim.app/main/dist/images/play_store.png"> -->
+
+
+    <meta name="twitter:card" content="app">
+    <meta name="twitter:site" content="@BirikimApp">
+    <meta name="twitter:description"
+        content="O para nereye gitti artık bileceksiniz. En uygun fiyatlı ürünler nerede hemen bulabileceksiniz. Birikimleriniz ne kadar değerlenmiş anında görebileceksiniz.">
+    <meta name="twitter:app:country" content="TR">
+    <meta name="twitter:app:name:iphone" content="Birikim">
+    <meta name="twitter:app:id:iphone" content="id1600832868">
+    <meta name="twitter:app:url:iphone" content="https://apps.apple.com/us/app/birikim/id1600832868">
+    <meta name="twitter:app:name:ipad" content="Birikim">
+    <meta name="twitter:app:id:ipad" content="id1600832868">
+    <meta name="twitter:app:url:ipad" content="https://apps.apple.com/us/app/birikim/id1600832868">
+    <meta name="twitter:app:name:googleplay" content="Birikim">
+    <meta name="twitter:app:id:googleplay" content="app.birikim.mobile">
+    <meta name="twitter:app:url:googleplay" content="https://play.google.com/store/apps/details?id=app.birikim.mobile">
 
 </head>
 
