--- a/index.html
+++ b/index.html
@@ -30,13 +30,13 @@
     <meta name="twitter:app:country" content="TR">
     <meta name="twitter:app:name:iphone" content="Birikim">
     <meta name="twitter:app:id:iphone" content="id1600832868">
-    <meta name="twitter:app:url:iphone" content="https://apps.apple.com/us/app/birikim/id1600832868">
+    <!-- <meta name="twitter:app:url:iphone" content="https://apps.apple.com/us/app/birikim/id1600832868"> -->
     <meta name="twitter:app:name:ipad" content="Birikim">
     <meta name="twitter:app:id:ipad" content="id1600832868">
-    <meta name="twitter:app:url:ipad" content="https://apps.apple.com/us/app/birikim/id1600832868">
+    <!-- <meta name="twitter:app:url:ipad" content="https://apps.apple.com/us/app/birikim/id1600832868"> -->
     <meta name="twitter:app:name:googleplay" content="Birikim">
     <meta name="twitter:app:id:googleplay" content="app.birikim.mobile">
-    <meta name="twitter:app:url:googleplay" content="https://play.google.com/store/apps/details?id=app.birikim.mobile">
+    <!-- <meta name="twitter:app:url:googleplay" content="https://play.google.com/store/apps/details?id=app.birikim.mobile"> -->
 
 </head>
 
