Twitter görselleri düzenlendi

--- a/index.html
+++ b/index.html
@@ -12,15 +12,14 @@
     <script src="https://unpkg.com/scrollreveal@4.0.0/dist/scrollreveal.min.js"></script>
     <link rel="icon" type="image/x-icon" href="dist/images/logo.svg">
 
-    <!-- <meta name="twitter:card" content="summary_large_image">
+    <meta name="twitter:card" content="summary_large_image">
     <meta name="twitter:site" content="@BirikimApp">
     <meta name="twitter:creator" content="@YerlikayaHasim">
     <meta name="twitter:title" content="Birikim Artık Sizlerle 🥳">
-    <meta name="twitter:description"
-        content="">
+    <meta name="twitter:description" content="">
 
     <meta name="twitter:image"
-        content="https://raw.githubusercontent.com/EFA-dev/birikim.app/main/dist/images/play_store.png"> -->
+        content="https://raw.githubusercontent.com/EFA-dev/birikim.app/main/dist/images/play_store.png">
 
 
     <meta name="twitter:card" content="app">
@@ -36,7 +35,7 @@
     <!-- <meta name="twitter:app:url:ipad" content="https://apps.apple.com/us/app/birikim/id1600832868"> -->
     <meta name="twitter:app:name:googleplay" content="Birikim">
     <meta name="twitter:app:id:googleplay" content="app.birikim.mobile">
-    <!-- <meta name="twitter:app:url:googleplay" content="https://play.google.com/store/apps/details?id=app.birikim.mobile"> -->
+    <meta name="twitter:app:url:googleplay" content="https://play.google.com/store/apps/details?id=app.birikim.mobile">
 
 </head>
 
