--- a/index.html
+++ b/index.html
@@ -21,6 +21,13 @@
     <meta name="twitter:image"
         content="https://raw.githubusercontent.com/EFA-dev/birikim.app/main/dist/images/play_store.png">
 
+
+    <meta property=og:title content='Birikim Artık Sizlerle 🥳'>
+    <meta property=og:description
+        content='O para nereye gitti artık bileceksiniz. En uygun fiyatlı ürünler nerede hemen bulabileceksiniz. Birikimleriniz ne kadar değerlenmiş anında görebileceksiniz.'>
+    <meta property=og:image
+        content=https://raw.githubusercontent.com/EFA-dev/birikim.app/main/dist/images/play_store.png>
+
     <!-- 
     <meta name="twitter:card" content="app">
     <meta name="twitter:site" content="@BirikimApp">
