--- a/index.html
+++ b/index.html
@@ -210,14 +210,14 @@
 
             <section class="pricing section">
                 <div class="container-sm">
-                    <div class="pricing-inner section-inner">
+                    <!-- <div class="pricing-inner section-inner">
                         <div class="pricing-header text-center">
                             <h2 class="section-title mt-0">Adresimiz</h2>
                             <p class="section-paragraph mb-0">EFA Haşim Yerlikaya<br>
-                                Balat Mahallesi Hızır Çavuş Mescidi Sokak No:40/A Fatih / İstanbul
+                             
                             </p>
-                        </div>
-                        <!-- <div class="pricing-tables-wrap">
+                        </div> -->
+                    <!-- <div class="pricing-tables-wrap">
                             <div class="pricing-table">
                                 <div class="pricing-table-inner is-revealing">
                                     <div class="pricing-table-main">
@@ -251,36 +251,36 @@
                                 </div>
                             </div>
                         </div> -->
-                    </div>
                 </div>
-            </section>
+    </div>
+    </section>
 
-            <section class="cta section">
-                <div class="container">
-                    <div class="cta-inner section-inner">
-                        <h3 class="section-title mt-0">Bize ulaşmak ister misiniz?</h3>
-                        <div class="cta-cta">
-                            <a class="button button-primary button-wide-mobile"
-                                href="mailto: info@birikim.app">info@birikim.app</a>
-                        </div>
-                    </div>
+    <section class="cta section">
+        <div class="container">
+            <div class="cta-inner section-inner">
+                <h3 class="section-title mt-0">Bize ulaşmak ister misiniz?</h3>
+                <div class="cta-cta">
+                    <a class="button button-primary button-wide-mobile"
+                        href="mailto: info@birikim.app">info@birikim.app</a>
                 </div>
-            </section>
-        </main>
+            </div>
+        </div>
+    </section>
+    </main>
 
-        <footer class="site-footer">
-            <div class="container">
-                <div class="site-footer-inner">
-                    <div class="brand footer-brand">
-                        <a href="#">
-                            <img class="header-logo-image" src="dist/images/logo.svg" alt="Logo">
-                        </a>
-                    </div>
-                    <ul class="footer-links list-reset">
-                        <li>
-                            <a href="/kvkk.html">KVKK</a>
-                        </li>
-                        <!-- <li>
+    <footer class="site-footer">
+        <div class="container">
+            <div class="site-footer-inner">
+                <div class="brand footer-brand">
+                    <a href="#">
+                        <img class="header-logo-image" src="dist/images/logo.svg" alt="Logo">
+                    </a>
+                </div>
+                <ul class="footer-links list-reset">
+                    <li>
+                        <a href="/kvkk.html">KVKK</a>
+                    </li>
+                    <!-- <li>
                             <a href="#">About us</a>
                         </li>
                         <li>
@@ -289,34 +289,34 @@
                         <li>
                             <a href="#">Support</a>
                         </li> -->
-                    </ul>
-                    <ul class="footer-social-links list-reset">
+                </ul>
+                <ul class="footer-social-links list-reset">
 
-                        <li>
-                            <a href="https://www.twitter.com/birikimapp">
-                                <span class="screen-reader-text">Twitter</span>
-                                <svg width="16" height="16" xmlns="http://www.w3.org/2000/svg">
-                                    <path
-                                        d="M16 3c-.6.3-1.2.4-1.9.5.7-.4 1.2-1 1.4-1.8-.6.4-1.3.6-2.1.8-.6-.6-1.5-1-2.4-1-1.7 0-3.2 1.5-3.2 3.3 0 .3 0 .5.1.7-2.7-.1-5.2-1.4-6.8-3.4-.3.5-.4 1-.4 1.7 0 1.1.6 2.1 1.5 2.7-.5 0-1-.2-1.5-.4C.7 7.7 1.8 9 3.3 9.3c-.3.1-.6.1-.9.1-.2 0-.4 0-.6-.1.4 1.3 1.6 2.3 3.1 2.3-1.1.9-2.5 1.4-4.1 1.4H0c1.5.9 3.2 1.5 5 1.5 6 0 9.3-5 9.3-9.3v-.4C15 4.3 15.6 3.7 16 3z"
-                                        fill="#0270D7" />
-                                </svg>
-                            </a>
-                        </li>
+                    <li>
+                        <a href="https://www.twitter.com/birikimapp">
+                            <span class="screen-reader-text">Twitter</span>
+                            <svg width="16" height="16" xmlns="http://www.w3.org/2000/svg">
+                                <path
+                                    d="M16 3c-.6.3-1.2.4-1.9.5.7-.4 1.2-1 1.4-1.8-.6.4-1.3.6-2.1.8-.6-.6-1.5-1-2.4-1-1.7 0-3.2 1.5-3.2 3.3 0 .3 0 .5.1.7-2.7-.1-5.2-1.4-6.8-3.4-.3.5-.4 1-.4 1.7 0 1.1.6 2.1 1.5 2.7-.5 0-1-.2-1.5-.4C.7 7.7 1.8 9 3.3 9.3c-.3.1-.6.1-.9.1-.2 0-.4 0-.6-.1.4 1.3 1.6 2.3 3.1 2.3-1.1.9-2.5 1.4-4.1 1.4H0c1.5.9 3.2 1.5 5 1.5 6 0 9.3-5 9.3-9.3v-.4C15 4.3 15.6 3.7 16 3z"
+                                    fill="#0270D7" />
+                            </svg>
+                        </a>
+                    </li>
 
-                    </ul>
-                    <div class="footer-copyright">&copy; 2022 EFA, all rights reserved</div>
-
-                </div>
-                <br>
-                <div class="footer-copyright">&copy;Google Play ve Google Play logosu Google LLC kuruluşunun ticari
-                    markalarıdır.</div>
-                <br>
-
-                <br>
+                </ul>
+                <div class="footer-copyright">&copy; 2022 EFA, all rights reserved</div>
 
             </div>
+            <br>
+            <div class="footer-copyright">&copy;Google Play ve Google Play logosu Google LLC kuruluşunun ticari
+                markalarıdır.</div>
+            <br>
 
-        </footer>
+            <br>
+
+        </div>
+
+    </footer>
     </div>
 
     <script src="dist/js/main.min.js"></script>
