--- a/index.html
+++ b/index.html
@@ -10,29 +10,28 @@
     <link rel="stylesheet" href="dist/css/style.css">
     <script src="https://unpkg.com/animejs@3.0.1/lib/anime.min.js"></script>
     <script src="https://unpkg.com/scrollreveal@4.0.0/dist/scrollreveal.min.js"></script>
-    <link rel="icon" type="image/x-icon" href="dist/images/logo.svg">
+    <link rel="icon" type="image/x-icon" href="dist/svg/app_icon.svg">
 
     <meta name="twitter:card" content="summary_large_image">
     <meta name="twitter:site" content="@BirikimApp">
     <meta name="twitter:creator" content="@YerlikayaHasim">
-    <meta name="twitter:title" content="Birikim Artık Sizlerle 🥳">
+    <meta name="twitter:title" content="Birikim Tamamen Yenilendi 🥳">
     <meta name="twitter:description"
-        content="O para nereye gitti artık bileceksiniz. En uygun fiyatlı ürünler nerede hemen bulabileceksiniz. Birikimleriniz ne kadar değerlenmiş anında görebileceksiniz.">
+        content="O para nereye gitti artık bileceksiniz. Birikimleriniz ne kadar değerlenmiş anında görebileceksiniz. Satın almak istediğiniz ürünleri unutmayacaksınız.">
     <meta name="twitter:image"
-        content="https://raw.githubusercontent.com/EFA-dev/birikim.app/main/dist/images/play_store.png">
+        content="https://raw.githubusercontent.com/EFA-dev/birikim.app/main/dist/webp/cover.webp">
 
 
-    <meta property=og:title content='Birikim Artık Sizlerle 🥳'>
+    <meta property=og:title content='Birikim Tamamen Yenilendi 🥳'>
     <meta property=og:description
-        content='O para nereye gitti artık bileceksiniz. En uygun fiyatlı ürünler nerede hemen bulabileceksiniz. Birikimleriniz ne kadar değerlenmiş anında görebileceksiniz.'>
-    <meta property=og:image
-        content=https://raw.githubusercontent.com/EFA-dev/birikim.app/main/dist/images/play_store.png>
+        content='O para nereye gitti artık bileceksiniz. Birikimleriniz ne kadar değerlenmiş anında görebileceksiniz. Satın almak istediğiniz ürünleri unutmayacaksınız.'>
+    <meta property=og:image content=https://raw.githubusercontent.com/EFA-dev/birikim.app/main/dist/webp/cover.webp>
 
     <!-- 
     <meta name="twitter:card" content="app">
     <meta name="twitter:site" content="@BirikimApp">
     <meta name="twitter:description"
-        content="O para nereye gitti artık bileceksiniz. En uygun fiyatlı ürünler nerede hemen bulabileceksiniz. Birikimleriniz ne kadar değerlenmiş anında görebileceksiniz.">
+        content="O para nereye gitti artık bileceksiniz.  Birikimleriniz ne kadar değerlenmiş anında görebileceksiniz.">
     <meta name="twitter:app:country" content="TR">
     <meta name="twitter:app:name:iphone" content="Birikim">
     <meta name="twitter:app:id:iphone" content="id1600832868">
@@ -49,7 +48,7 @@
 
 <body class="is-boxed has-animations">
     <div class="body-wrap">
-        <header class="site-header">
+        <!-- <header class="site-header">
             <div class="container">
                 <div class="site-header-inner">
                     <div class="brand header-brand">
@@ -61,17 +60,17 @@
                     </div>
                 </div>
             </div>
-        </header>
+        </header> -->
 
         <main>
             <section class="hero">
                 <div class="container">
                     <div class="hero-inner">
                         <div class="hero-copy">
-                            <h1 class="hero-title mt-0">Birikim Artık Sizlerle 🥳</h1>
-                            <p class="hero-paragraph">O para nereye gitti artık bileceksiniz. En uygun fiyatlı ürünler
-                                nerede hemen bulabileceksiniz. Birikimleriniz ne kadar değerlenmiş anında
-                                görebileceksiniz.</p>
+                            <h1 class="hero-title mt-0">Birikim Tamamen Yenilendi 🥳</h1>
+                            <p class="hero-paragraph">O para nereye gitti artık bileceksiniz. Birikimleriniz ne kadar
+                                değerlenmiş anında
+                                görebileceksiniz. Satın almak istediğiniz ürünleri unutmayacaksınız.</p>
 
                             <table>
                                 <td>
@@ -93,7 +92,7 @@
                             </table>
                         </div>
                         <div>
-                            <img src="dist/svg/1.svg" alt="Logo" height="200">
+                            <img src="dist/webp/cover.webp" alt="Logo" height="200">
                         </div>
 
                     </div>
@@ -107,102 +106,76 @@
                             <div class="feature text-center is-revealing">
                                 <div class="feature-inner">
                                     <div class="feature-icon">
-                                        <img src="dist/svg/2.svg" alt="Feature 01">
+                                        <img src="dist/webp/01.webp" alt="Feature 01">
                                     </div>
-                                    <h4 class="feature-title mt-24">Cüzdan</h4>
-                                    <!-- <p class="text-sm mb-0">Fermentum posuere urna nec tincidunt praesent semper feugiat
-                                        nibh. A arcu cursus vitae congue mauris. Nam at lectus urna duis convallis.
-                                        Mauris rhoncus aenean vel elit scelerisque mauris.</p> -->
+                                    <h4 class="feature-title mt-24">Hızlı Güvenli Estetik</h4>
+
                                 </div>
                             </div>
                             <div class="feature text-center is-revealing">
                                 <div class="feature-inner">
                                     <div class="feature-icon">
-                                        <img src="dist/svg/3.svg" alt="Feature 02">
+                                        <img src="dist/webp/02.webp" alt="Feature 01">
                                     </div>
-                                    <h4 class="feature-title mt-24">Güvenlik</h4>
-                                    <!-- <p class="text-sm mb-0">Fermentum posuere urna nec tincidunt praesent semper feugiat
-                                        nibh. A arcu cursus vitae congue mauris. Nam at lectus urna duis convallis.
-                                        Mauris rhoncus aenean vel elit scelerisque mauris.</p> -->
+                                    <h4 class="feature-title mt-24">Özel Ajanda</h4>
+
                                 </div>
                             </div>
                             <div class="feature text-center is-revealing">
                                 <div class="feature-inner">
                                     <div class="feature-icon">
-                                        <img src="dist/svg/4.svg" alt="Feature 03">
+                                        <img src="dist/webp/03.webp" alt="Feature 02">
                                     </div>
-                                    <h4 class="feature-title mt-24">Analiz</h4>
-                                    <!-- <p class="text-sm mb-0">Fermentum posuere urna nec tincidunt praesent semper feugiat
-                                        nibh. A arcu cursus vitae congue mauris. Nam at lectus urna duis convallis.
-                                        Mauris rhoncus aenean vel elit scelerisque mauris.</p> -->
+                                    <h4 class="feature-title mt-24">Güvenli Kasa</h4>
+
                                 </div>
                             </div>
                             <div class="feature text-center is-revealing">
                                 <div class="feature-inner">
                                     <div class="feature-icon">
-                                        <img src="dist/svg/5.svg" alt="Feature 04">
+                                        <img src="dist/webp/04.webp" alt="Feature 03">
                                     </div>
-                                    <h4 class="feature-title mt-24">Kasa</h4>
-                                    <!-- <p class="text-sm mb-0">Fermentum posuere urna nec tincidunt praesent semper feugiat
-                                        nibh. A arcu cursus vitae congue mauris. Nam at lectus urna duis convallis.
-                                        Mauris rhoncus aenean vel elit scelerisque mauris.</p> -->
+                                    <h4 class="feature-title mt-24">Pratik Alışveriş Listesi</h4>
+
                                 </div>
                             </div>
                             <div class="feature text-center is-revealing">
                                 <div class="feature-inner">
                                     <div class="feature-icon">
-                                        <img src="dist/svg/6.svg" alt="Feature 05">
+                                        <img src="dist/webp/05.webp" alt="Feature 04">
                                     </div>
-                                    <h4 class="feature-title mt-24">Kıymetli Maden</h4>
-                                    <!-- <p class="text-sm mb-0">Fermentum posuere urna nec tincidunt praesent semper feugiat
-                                        nibh. A arcu cursus vitae congue mauris. Nam at lectus urna duis convallis.
-                                        Mauris rhoncus aenean vel elit scelerisque mauris.</p> -->
+                                    <h4 class="feature-title mt-24">Kullanışlı Kart Tasarımı</h4>
+
                                 </div>
                             </div>
                             <div class="feature text-center is-revealing">
                                 <div class="feature-inner">
                                     <div class="feature-icon">
-                                        <img src="dist/svg/7.svg" alt="Feature 06">
+                                        <img src="dist/webp/06.webp" alt="Feature 05">
                                     </div>
-                                    <h4 class="feature-title mt-24">Döviz</h4>
-                                    <!-- <p class="text-sm mb-0">Fermentum posuere urna nec tincidunt praesent semper feugiat
-                                        nibh. A arcu cursus vitae congue mauris. Nam at lectus urna duis convallis.
-                                        Mauris rhoncus aenean vel elit scelerisque mauris.</p> -->
+                                    <h4 class="feature-title mt-24">Kolay Raporlar</h4>
+
                                 </div>
                             </div>
                             <div class="feature text-center is-revealing">
                                 <div class="feature-inner">
                                     <div class="feature-icon">
-                                        <img src="dist/svg/8.svg" alt="Feature 06">
+                                        <img src="dist/webp/07.webp" alt="Feature 06">
                                     </div>
-                                    <h4 class="feature-title mt-24">Gelir Yönetimi</h4>
-                                    <!-- <p class="text-sm mb-0">Fermentum posuere urna nec tincidunt praesent semper feugiat
-                                                                        nibh. A arcu cursus vitae congue mauris. Nam at lectus urna duis convallis.
-                                                                        Mauris rhoncus aenean vel elit scelerisque mauris.</p> -->
+                                    <h4 class="feature-title mt-24">Özel Bölümler</h4>
+
                                 </div>
                             </div>
                             <div class="feature text-center is-revealing">
                                 <div class="feature-inner">
                                     <div class="feature-icon">
-                                        <img src="dist/svg/9.svg" alt="Feature 06">
+                                        <img src="dist/webp/08.webp" alt="Feature 06">
                                     </div>
-                                    <h4 class="feature-title mt-24">Gider Yönetimi</h4>
-                                    <!-- <p class="text-sm mb-0">Fermentum posuere urna nec tincidunt praesent semper feugiat
-                                                                        nibh. A arcu cursus vitae congue mauris. Nam at lectus urna duis convallis.
-                                                                        Mauris rhoncus aenean vel elit scelerisque mauris.</p> -->
+                                    <h4 class="feature-title mt-24">Özel Raporlar</h4>
+
                                 </div>
                             </div>
-                            <div class="feature text-center is-revealing">
-                                <div class="feature-inner">
-                                    <div class="feature-icon">
-                                        <img src="dist/svg/10.svg" alt="Feature 06">
-                                    </div>
-                                    <h4 class="feature-title mt-24">Alışveriş</h4>
-                                    <!-- <p class="text-sm mb-0">Fermentum posuere urna nec tincidunt praesent semper feugiat
-                                                                        nibh. A arcu cursus vitae congue mauris. Nam at lectus urna duis convallis.
-                                                                        Mauris rhoncus aenean vel elit scelerisque mauris.</p> -->
-                                </div>
-                            </div>
+
                         </div>
                     </div>
                 </div>
@@ -273,7 +246,7 @@
             <div class="site-footer-inner">
                 <div class="brand footer-brand">
                     <a href="#">
-                        <img class="header-logo-image" src="dist/images/logo.svg" alt="Logo">
+                        <img class="header-logo-image" height="48" width="48" src="dist/svg/app_icon.svg" alt="Logo">
                     </a>
                 </div>
                 <ul class="footer-links list-reset">
