Add KVKK link to CTA section

--- a/index.html
+++ b/index.html
@@ -228,6 +228,7 @@
     </div>
     </section>
 
+
     <section class="cta section">
         <div class="container">
             <div class="cta-inner section-inner">
@@ -235,6 +236,12 @@
                 <div class="cta-cta">
                     <a class="button button-primary button-wide-mobile"
                         href="mailto: info@birikim.app">info@birikim.app</a>
+                </div>
+            </div>
+            <div class="cta-inner section-inner">
+                <h3 class="section-title mt-0">KVKK</h3>
+                <div class="cta-cta">
+                <a href="/kvkk.html">KVKK</a>
                 </div>
             </div>
         </div>
@@ -250,9 +257,9 @@
                     </a>
                 </div>
                 <ul class="footer-links list-reset">
-                    <li>
+                    <!-- <li>
                         <a href="/kvkk.html">KVKK</a>
-                    </li>
+                    </li> -->
                     <!-- <li>
                             <a href="#">About us</a>
                         </li>
