Update company name in privacy policy

--- a/kvkk.html
+++ b/kvkk.html
@@ -83,7 +83,7 @@
                 style="font-family:Quicksand; font-weight:bold; letter-spacing:0.4pt; color:#434343">Kişisel Verilerin
                 Korunmasına İlişkin Aydınlatma Metni</span></p>
         <p style="margin-bottom:14pt; font-size:11.5pt"><span
-                style="font-family:Quicksand; letter-spacing:0.4pt; color:#434343">EFA Haşim Yerlikaya olarak
+                style="font-family:Quicksand; letter-spacing:0.4pt; color:#434343">Birikim olarak
                 (</span><span
                 style="font-family:Quicksand; font-weight:bold; letter-spacing:0.4pt; color:#434343">EFA</span><span
                 style="font-family:Quicksand; letter-spacing:0.4pt; color:#434343"> olarak adlandırılacaktır); kişisel
@@ -679,13 +679,7 @@
                 style="font-family:Quicksand; letter-spacing:0.4pt; color:#434343">Kişisel verilerinizle ilgili
                 sorularınızı ve taleplerinizi, Veri Sorumlusuna Başvuru Usul ve Esasları hakkında Tebliğ’de belirtilen
                 şartlara uygun düzenlenmiş dilekçeyle aşağıdaki yöntemlerle iletebilirsiniz.</span></p>
-        <ul type="disc" style="margin:0pt; padding-left:0pt">
-            <li class="ListParagraph"
-                style="margin-left:46.29pt; padding-left:7.71pt; font-family:serif; font-size:11.5pt; letter-spacing:0.4pt; color:#434343; -aw-font-family:'Symbol'; -aw-font-weight:normal; -aw-number-format:''">
-                <span style="font-family:Quicksand; font-weight:bold">Yazılı Başvuru</span><br /><br /><span
-                    style="font-family:Quicksand; font-size:12pt; color:#353535">EFA Haşim Yerlikaya</span><br /><span
-                    style="font-family:Quicksand; font-size:12pt; color:#353535"></span></li>
-        </ul>
+      
         <p class="ListParagraph" style="margin-left:54pt; font-size:11.5pt"><span
                 style="font-family:Quicksand; letter-spacing:0.4pt; color:#434343; -aw-import:ignore">&#xa0;</span></p>
         <ul type="disc" style="margin:0pt; padding-left:0pt">
