Update privacy policy and company name

--- a/index.html
+++ b/index.html
@@ -186,7 +186,7 @@
                     <!-- <div class="pricing-inner section-inner">
                         <div class="pricing-header text-center">
                             <h2 class="section-title mt-0">Adresimiz</h2>
-                            <p class="section-paragraph mb-0">EFA Haşim Yerlikaya<br>
+                            <p class="section-paragraph mb-0">EFA <br>
                              
                             </p>
                         </div> -->
