--- a/index.html
+++ b/index.html
@@ -106,72 +106,72 @@
                             <div class="feature text-center is-revealing">
                                 <div class="feature-inner">
                                     <div class="feature-icon">
-                                        <img src="dist/webp/01.webp" alt="Feature 01">
+                                        <img src="dist/webp/v2.8/1.webp" alt="Feature 01">
                                     </div>
-                                    <h4 class="feature-title mt-24">Hızlı Güvenli Estetik</h4>
+                                    <h4 class="feature-title mt-24">Finans Asistanınız</h4>
 
                                 </div>
                             </div>
                             <div class="feature text-center is-revealing">
                                 <div class="feature-inner">
                                     <div class="feature-icon">
-                                        <img src="dist/webp/02.webp" alt="Feature 01">
+                                        <img src="dist/webp/v2.8/2.webp" alt="Feature 01">
                                     </div>
-                                    <h4 class="feature-title mt-24">Özel Ajanda</h4>
+                                    <h4 class="feature-title mt-24">Özel Modüller</h4>
 
                                 </div>
                             </div>
                             <div class="feature text-center is-revealing">
                                 <div class="feature-inner">
                                     <div class="feature-icon">
-                                        <img src="dist/webp/03.webp" alt="Feature 02">
+                                        <img src="dist/webp/v2.8/3.webp" alt="Feature 02">
                                     </div>
-                                    <h4 class="feature-title mt-24">Güvenli Kasa</h4>
+                                    <h4 class="feature-title mt-24">Hızlı Raporlar</h4>
 
                                 </div>
                             </div>
                             <div class="feature text-center is-revealing">
                                 <div class="feature-inner">
                                     <div class="feature-icon">
-                                        <img src="dist/webp/04.webp" alt="Feature 03">
+                                        <img src="dist/webp/v2.8/4.webp" alt="Feature 03">
                                     </div>
-                                    <h4 class="feature-title mt-24">Pratik Alışveriş Listesi</h4>
+                                    <h4 class="feature-title mt-24">Detaylı Raporlar</h4>
 
                                 </div>
                             </div>
                             <div class="feature text-center is-revealing">
                                 <div class="feature-inner">
                                     <div class="feature-icon">
-                                        <img src="dist/webp/05.webp" alt="Feature 04">
+                                        <img src="dist/webp/v2.8/5.webp" alt="Feature 04">
                                     </div>
-                                    <h4 class="feature-title mt-24">Kullanışlı Kart Tasarımı</h4>
+                                    <h4 class="feature-title mt-24">Kullanışlı Tasarım</h4>
 
                                 </div>
                             </div>
                             <div class="feature text-center is-revealing">
                                 <div class="feature-inner">
                                     <div class="feature-icon">
-                                        <img src="dist/webp/06.webp" alt="Feature 05">
+                                        <img src="dist/webp/v2.8/6.webp" alt="Feature 05">
                                     </div>
-                                    <h4 class="feature-title mt-24">Kolay Raporlar</h4>
+                                    <h4 class="feature-title mt-24">Organize Detaylar</h4>
 
                                 </div>
                             </div>
                             <div class="feature text-center is-revealing">
                                 <div class="feature-inner">
                                     <div class="feature-icon">
-                                        <img src="dist/webp/07.webp" alt="Feature 06">
+                                        <img src="dist/webp/v2.8/7.webp" alt="Feature 06">
                                     </div>
-                                    <h4 class="feature-title mt-24">Özel Bölümler</h4>
+                                    <h4 class="feature-title mt-24">Alışveriş Listeleri</h4>
 
                                 </div>
                             </div>
                             <div class="feature text-center is-revealing">
                                 <div class="feature-inner">
                                     <div class="feature-icon">
-                                        <img src="dist/webp/08.webp" alt="Feature 06">
+                                        <img src="dist/webp/v2.8/8.webp" alt="Feature 06">
                                     </div>
-                                    <h4 class="feature-title mt-24">Özel Raporlar</h4>
+                                    <h4 class="feature-title mt-24">Hazır Ürünler</h4>
 
                                 </div>
                             </div>
