--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
                 <div class="container">
                     <div class="hero-inner">
                         <div class="hero-copy">
-                            <h1 class="hero-title mt-0">Birikim Tamamen Yenilendi 🥳</h1>
+                            <h1 class="hero-title mt-0">Birikim - Finans Asistanınız 🐿️</h1>
                             <p class="hero-paragraph">O para nereye gitti artık bileceksiniz. Birikimleriniz ne kadar
                                 değerlenmiş anında
                                 görebileceksiniz. Satın almak istediğiniz ürünleri unutmayacaksınız.</p>
